# juyoungml.github.io

./: .eslintrc.json  .gitignore  .prettierignore  404.html  500.html  CLAUDE.md  README.md  index.html  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: build-cv.yml  deploy.yml  update-publications.yml
404/: index.html
500/: index.html
_next/static/-HGjvzzIxlnwRl8I8McRs/: _buildManifest.js
_next/static/3JXNfPrRClf0Mu-4YiAzA/: _buildManifest.js
_next/static/AjluaqrMZVt54CSe-R7-E/: _buildManifest.js
_next/static/_gWKarG86fv0vdu3IUNkK/: _buildManifest.js
_next/static/chunks/: 123-ab0ff0cb50c0abe6.js  main-69bb27434a1f7c85.js  main-977370c0794628b9.js  webpack-1537143210904192.js
_next/static/css/: 3733c2a1b7f81817.css  966be810721f038f.css  dde0b57aceed5ea5.css  e52cb10aa02d5683.css
_next/static/hLOJkwvmn58KG-cIDhSGM/: _buildManifest.js
_next/static/ioGrl5soECD3NtKtHnWSA/: _buildManifest.js
about/: index.html
blog/: index.html
components/: BackToTop.tsx  ContactSection.tsx  ExperienceSection.tsx  HeroSection.tsx  Navigation.tsx  NewsSection.tsx  ProjectsSection.tsx  PublicationsSection.tsx  ResearchSection.tsx  ThemeToggle.tsx
cv/: README.md  build.sh  cv.typ  extract-data.py
cv/overleaf/: main.tex
cv/overleaf/sections/: activities.tex  work.tex  (+2 more)
data/: portfolio.ts  publications_backup_20250816_170853.json
pages/: 404.tsx  500.tsx  _app.tsx  _error.tsx  about.tsx  blog.tsx  index.js  index.tsx
public/: rss.xml
scripts/: fetch_publications.py
styles/: globals.css
(+11 files in other folders)
